--- a/backend/env.example
+++ b/backend/env.example
@@ -1,19 +1,69 @@
-# Database
-DATABASE_URL=postgresql://username:password@localhost:5432/elearning_db
+# Environment
+ENVIRONMENT=development
+LOG_LEVEL=INFO
+
+# Database - Supabase PostgreSQL
+DATABASE_URL=postgresql://postgres:password@localhost:5432/elearning
+DATABASE_POOL_SIZE=10
+DATABASE_MAX_OVERFLOW=20
 
 # Security
-SECRET_KEY=your-secret-key-here
+SECRET_KEY=your-secret-key-change-this-in-production
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+REFRESH_TOKEN_EXPIRE_DAYS=7
 
 # CORS
-BACKEND_CORS_ORIGINS=["http://localhost:3000", "http://localhost:3001"]
+BACKEND_CORS_ORIGINS=["http://localhost:3000", "http://localhost:3001", "http://localhost:8080"]
+
+# Supabase
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+
+# Redis Cache & Queue
+REDIS_URL=redis://localhost:6379/0
+REDIS_CACHE_TTL=300
+REDIS_RATE_LIMIT_TTL=3600
+
+# AI & LLM
+GEMINI_API_KEY=your-gemini-api-key
+GEMINI_MODEL_CHAT=gemini-2.0-flash-exp
+GEMINI_MODEL_COMPLEX=gemini-2.0-flash-thinking-exp
+OPENAI_API_KEY=your-openai-api-key
+OPENAI_MODEL=gpt-4o-mini
+
+# Vector Search
+EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
+VECTOR_DIMENSION=384
+SIMILARITY_THRESHOLD=0.7
+
+# File Storage
+UPLOAD_MAX_SIZE=52428800
+ALLOWED_EXTENSIONS=[".pdf", ".docx", ".txt", ".md", ".jpg", ".png", ".mp4"]
+STORAGE_BUCKET=materials
+
+# Rate Limiting
+RATE_LIMIT_REQUESTS=100
+RATE_LIMIT_WINDOW=3600
+CHAT_RATE_LIMIT=50
+AI_RATE_LIMIT=20
+
+# Monitoring
+SENTRY_DSN=your-sentry-dsn
+PROMETHEUS_ENABLED=true
 
 # Email (optional)
-SMTP_TLS=True
+SMTP_TLS=true
 SMTP_PORT=587
 SMTP_HOST=smtp.gmail.com
 SMTP_USER=your-email@gmail.com
 SMTP_PASSWORD=your-app-password
 EMAILS_FROM_EMAIL=your-email@gmail.com
 EMAILS_FROM_NAME="E-Learning Platform"
+
+# Feature Flags
+ENABLE_AI_CHAT=true
+ENABLE_DEBATE_ROOM=true
+ENABLE_SOCRATIC_BOT=true
+ENABLE_AUTO_QUIZ_GENERATION=true
